# paper--blog

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
paper_blog_agent/: __init__.py  agent_events.py  cli.py  exporters.py  graph.py  llm_settings.py  models.py  processing.py  web.py  web_api.py  web_search.py  workflow.py
paper_blog_agent/agents/: __init__.py  chat_agent.py
paper_blog_agent/ingestion/: __init__.py  arxiv_loader.py  common.py  docx_loader.py  markdown_loader.py  pdf_loader.py
paper_blog_agent/memory/: __init__.py  profile.py  store.py
paper_blog_agent/prompts/: __init__.py  blog_generation.py  context_sufficiency.py  paper_chat.py  verification.py  web_search.py
paper_blog_agent/prompts/blog_modes/: __init__.py  learning.py  popular.py  technical.py
web/: activities.js  api.js  app.js  index.html  markdown.js  search_mode.js  styles.css  theme.js
